style: fix lighthouse contrast ratio
ref :
* https://web.dev/color-contrast/

--- a/themes/hello-friend/assets/css/style.css
+++ b/themes/hello-friend/assets/css/style.css
@@ -1530,11 +1530,12 @@ hr {
 }
 
 .footer .copyright .copyrights {
-    opacity: 0.75;
+    opacity: 1;
 }
 
 .footer .copyright .copyrights:hover {
     opacity: 1;
+    color:#000;
 }
 
 .footer .copyright--user {
